tests/compile-fail/integration_suite__integration__general__bad_signature_in_mapfile.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: bad signature: 'z' or 'm' arguments can only appear at the very end
  ┌─ <mapfile>:3:6
  │
3 │ 1000 z(bs=4)S
  │      ^^^^^^^^ 'z' or 'm' arguments can only appear at the very end


